# rpcfast-grpcbench

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  grpcbench.example.toml
.github/workflows/: release.yml
protos/: arpc.proto  jetstream.proto  shreder-binary.proto  shredstream.proto
src/: config.rs  main.rs  observation.rs  proto.rs  report.rs  stats.rs
src/protocols/: aperture.rs  arpc.rs  grpc.rs  jetstream.rs  mod.rs  shreder_binary.rs  shredstream.rs  yellowstone.rs
