[package]
name = "rpcfast-grpcbench"
version = "0.1.1"
edition = "2021"
description = "Compare Solana gRPC stream speed across Yellowstone, Jito ShredStream, and Aperture txstream."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
humantime = "2.2.0"
humantime-serde = "1.1.1"
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-entry = "2.2.1"
solana-sdk = "2.2.2"
terminal_size = "0.4.2"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tonic = { version = "0.13.1", features = ["tls-native-roots", "tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = "0.8.23"
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
aperture-grpc-client = "0.3.1"

[build-dependencies]
protobuf-src = "1.1.0"
tonic-build = "0.13.1"
